fix overflow on compact cards

--- a/browser/src/components/ContributionCard.css
+++ b/browser/src/components/ContributionCard.css
@@ -60,6 +60,12 @@
 
 .compactContributionCardContainer p {
   /* z-index: 10; */
+  overflow-y:clip;
+  text-overflow:ellipsis;
+  white-space: break-spaces;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 8;
 }
 
 .blobSingleContainer {
